Fixed coding font, updated tag, fixed menu button overlaps title

--- a/src/less/origami.less
+++ b/src/less/origami.less
@@ -149,7 +149,7 @@
 
 .menu-button {
 	position: absolute;
-	top: 3rem;
+	top: 1rem;
 	right: 3rem;
 	z-index: 20;
 	text-decoration: none;
