--- a/src/less/responsive-tablet.less
+++ b/src/less/responsive-tablet.less
@@ -152,6 +152,7 @@
 	.left-on-tablet-down {
 		left: -360px;
 		transition: left .5s ease;
+		will-change: left;
 		z-index: 11;
 	}
 
