--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -83,3 +83,9 @@
 .force-link {
 	cursor: pointer;
 }
+
+.for(@i, @n) {.-each(@i)}
+.for(@n)     when (isnumber(@n)) {.for(1, @n)}
+.for(@i, @n) when not (@i = @n)  {
+	.for((@i + (@n - @i) / abs(@n - @i)), @n);
+}
