--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,6 +1,6 @@
 @font-title: 'NanumSquare', sans-serif;
 @font-content: 'Roboto-Slab', 'Nanum Barun Gothic', sans-serif;
-@font-code: 'Fira Code', 'D2 coding', monospace;
+@font-code: 'Fira Code', 'D2 coding', monospace !important;
 
 @background: #2c3e50;
 @background-tip: #34495e;
@@ -8,6 +8,8 @@
 @post-background: #ecf0f1;
 @foreground: #2980b9;
 @button-color: #414141;
+
+@use-label-tag: false;
 
 @button-width: 2px;
 @divider-width: 9px;
